# UavCamera_Control

./: CMakeLists.txt  README.md
include/: HardWare_Server.h
include/camera/: UsbCamera.h
include/light/: light.h
include/udpserver/: udpServer.h
src/: HardWare_Server.cpp
src/camera/: UsbCamera.cpp
src/light/: light.cpp
src/udpserver/: UdpServer.cpp
